Allauth Email Template

--- a/one/templates/account/email/email_confirmation_message.html
+++ b/one/templates/account/email/email_confirmation_message.html
@@ -11,7 +11,7 @@
       <td align="center" valign="center"
           style="text-align:center; padding: 40px">
         <a href="{{ host }}" rel="noopener" target="_blank">
-          <img alt="Logo" src="{{ host }}/static/metronic/media/logos/mail.svg' %}"/>
+          <img alt="Logo" src="{{ host }}/static/metronic/media/logos/mail.svg"/>
         </a>
       </td>
     </tr>
