--- a/one/templates/aside/base.html
+++ b/one/templates/aside/base.html
@@ -40,7 +40,7 @@
   <div class="aside-menu flex-column-fluid">
 
     <!--layout-partial:aside/menu.html-->
-    {% include 'aside/menu.html' %}
+{#    {% include 'aside/menu.html' %}#}
   </div>
   <!--end::Aside menu-->
 
