--- a/one/static/sass/project.scss
+++ b/one/static/sass/project.scss
@@ -4,7 +4,7 @@
 // project specific CSS goes here
 
 ////////////////////////////////
-		//Variables//
+//Variables//
 ////////////////////////////////
 
 // Alert colors
@@ -17,7 +17,7 @@ $dark-pink: #eed3d7;
 $red: #b94a48;
 
 ////////////////////////////////
-		//Alerts//
+//Alerts//
 ////////////////////////////////
 
 // bootstrap alert CSS, translated to the django-standard levels of
@@ -33,4 +33,9 @@ $red: #b94a48;
   background-color: $pink;
   border-color: $dark-pink;
   color: $red;
+}
+
+.dropify-wrapper .dropify-message span.file-icon {
+  font-size: 18px;
+  color: #CCC;
 }
