add engage for file explore

--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -142,7 +142,8 @@
 <!--end::Drawers-->
 <!--end::Main-->
 
-<!--layout-partial:layout/engage/_main.html-->
+<!--layout-partial:engage/main.html-->
+{% include 'engage/main.html' %}
 
 <!--layout-partial:layout/_scrolltop.html-->
 {% include 'layout/_scrolltop.html' %}
