Update Group package

--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -40,6 +40,7 @@
       <script type="text/javascript" src="{% static 'filebrowser/js/fileuploader.js' %}"></script>
       <script src="{% static 'js/webpush/auto.js' %}"></script>
       <script src="{% static 'js/filebrowser/upload_button.js' %}"></script>
+      <script src="{% static 'js/widgets/model_select_actions.js' %}"></script>
       <script defer src="{% static 'js/project.js' %}"></script>
 
     {% endblock javascript %}
