--- a/one/templates/_base.html
+++ b/one/templates/_base.html
@@ -1,143 +1,12 @@
-{% load static i18n %}
-{% load webpush_notifications %}<!DOCTYPE html>
-{% get_current_language as LANGUAGE_CODE %}
-<html lang="{{ LANGUAGE_CODE }}">
-<head>
-  {% webpush_header %}
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>{% block title %}Riso Tech one platform{% endblock title %}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Behold My Awesome Project!">
-  <meta name="author" content="Bin Nguyen">
+{% load webpush_notifications %}
 
-  <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
-
-  {% block css %}
-    <!-- Latest compiled and minified Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
-          integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <!-- File Browser -->
-    <link rel="stylesheet" type="text/css" href="{% static 'filebrowser/css/filebrowser.css' %}"/>
-    <!-- Your stuff: Third-party CSS libraries go here -->
-    <!-- Your stuff: Third-party CSS libraries go here -->
-
-    <!-- This file stores project-specific CSS -->
-    <link href="{% static 'css/project.css' %}" rel="stylesheet">
-  {% endblock %}
-  <!-- Le javascript
-  ================================================== -->
-  {# Placed at the top of the document so pages load faster with defer #}
-  {% block javascript %}
-    <!-- Bootstrap JS -->
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
-            integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.1.js"
-            integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <!-- Your stuff: Third-party javascript libraries go here -->
-
-    <!-- Vendor dependencies bundled as one file-->
-
-    <!-- place project specific Javascript in this file -->
-    <script type="text/javascript" src="{% static 'filebrowser/js/fileuploader.js' %}"></script>
-    <script src="{% static 'js/webpush/auto.js' %}"></script>
-    <script src="{% static 'js/filebrowser/upload_button.js' %}"></script>
-    <script src="{% static 'js/widgets/model_select_actions.js' %}"></script>
-    <script defer src="{% static 'js/project.js' %}"></script>
-
-  {% endblock javascript %}
-
-</head>
-
-<body>
-
-<div class="mb-1">
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <div class="container-fluid">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-              aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'home' %}">Riso Tech one platform</a>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'home' %}">Home <span class="visually-hidden">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'about' %}">About</a>
-          </li>
-          {% if request.user.is_authenticated %}
-            <li class="nav-item">
-              {# URL provided by django-allauth/account/urls.py #}
-              <a class="nav-link" href="{% url 'users:detail' request.user.username %}">{% translate "My Profile" %}</a>
-            </li>
-            <li class="nav-item">
-              {# URL provided by django-allauth/account/urls.py #}
-              <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>
-            </li>
-            {% if user.is_superuser %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'settings:site' %}">{% translate "Site Configurations" %}</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'auth:group-list' %}">{% translate "Groups" %}</a>
-              </li>
-              <li>
-                <div class="form-row" id="file-uploader">
-                  <div class="form-col">
-                    <noscript>
-                      {% trans "Please enable Javascript to upload files." %}
-                    </noscript>
-                  </div>
-                </div>
-              </li>
-            {% endif %}
-          {% else %}
-            {% if ACCOUNT_ALLOW_REGISTRATION %}
-              <li class="nav-item">
-                {# URL provided by django-allauth/account/urls.py #}
-                <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% translate "Sign Up" %}</a>
-              </li>
-            {% endif %}
-            <li class="nav-item">
-              {# URL provided by django-allauth/account/urls.py #}
-              <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% translate "Sign In" %}</a>
-            </li>
-          {% endif %}
-          <li class="nav-item d-none">
-            {% webpush_button %}
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
+<div class="form-row" id="file-uploader">
+  <div class="form-col">
+    <noscript>
+      {% trans "Please enable Javascript to upload files." %}
+    </noscript>
+  </div>
 </div>
-
-<div class="container">
-
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}">
-        {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-
-  {% block content %}
-    <p>Use this document as a way to quick start any new project.</p>
-  {% endblock content %}
-
-</div> <!-- /container -->
-
-{% block modal %}{% endblock modal %}
 <script type="text/javascript">
   let fileUploader_url = "{% url 'filebrowser:fb_do_upload' %}";
   let template_strings = {
@@ -157,14 +26,90 @@
   }
   initFileUploader(fileUploader_url, template_strings, fileTemplate_strings, '{{ csrf_token }}', messages, 10485760);
 </script>
-{% block inline_javascript %}
-  {% comment %}
-    Script tags with only code, no src (defer by default). To run
-    with a "defer" so that you run inline code:
-    <script>
-      window.addEventListener('DOMContentLoaded', () => {/* Run whatever you want */});
+
+{% block javascript %}
+  <!--begin::hidden form-->
+  <div style="display: none;">
+    {% webpush_button %}
+    <form action="{% url 'set_language' %}"
+          method="post" id="change_language_form_id">
+      {% csrf_token %}
+      <input name="next" type="hidden" value="{{ redirect_to }}">
+      <select name="language" id="change_language_select_id">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+          <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+            {{ language.name_local }} ({{ language.code }})
+          </option>
+        {% endfor %}
+      </select>
+      <input type="submit" value="Go">
+    </form>
+  </div>
+  <!--end::hidden form-->
+
+  {{ block.super }}
+
+  {% if messages %}
+    {% for message in messages %}
+      <script>
+        // Show message popup. For more info check the plugin's official documentation: https://sweetalert2.github.io/
+        Swal.fire({
+          text: "{{ message }}!",
+          icon: "{% if message.tags %}{{ message.tags }}{% else %}success{% endif %}",
+          buttonsStyling: false,
+          confirmButtonText: "{% translate 'Ok' %}!",
+          customClass: {
+            confirmButton: "btn btn-primary"
+          }
+        });
+      </script>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.errors %}
+    <script id="id_form_error" type="application/json">
+      {{ form.errors.as_json }}
     </script>
-    {% endcomment %}
-{% endblock inline_javascript %}
-</body>
-</html>
+    <script>
+      toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": true,
+        "progressBar": true,
+        "positionClass": "toastr-top-center",
+        "preventDuplicates": false,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+      };
+      const form_errors = JSON.parse(document.getElementById('id_form_error').textContent.replaceAll('&quot;', '"'));
+      $.each(form_errors, function (key, value) {
+        $.each(value, function (index, _value) {
+          if (key === "__all__") {
+            toastr.error(_value.message, "{% translate 'Error' %}");
+          } else {
+            toastr.error(_value.message, key);
+          }
+        });
+      });
+    </script>
+  {% endif %}
+
+  <!--begin::Django language-->
+  <script>
+    function submitChangeLanguageForm(language) {
+      $('#change_language_select_id').val(language).change();
+      $('#change_language_form_id').submit();
+    }
+  </script>
+  <!--end::Django language-->
+
+{% endblock %}
