--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -1,1 +1,66 @@
 {% extends layout %}
+{% load webpush_notifications %}
+
+{% block javascript %}
+  {{ block.super }}
+
+  {% if messages %}
+    {% for message in messages %}
+      <script>
+        // Show message popup. For more info check the plugin's official documentation: https://sweetalert2.github.io/
+        Swal.fire({
+          text: "{{ message }}!",
+          icon: "{% if message.tags %}{{ message.tags }}{% else %}success{% endif %}",
+          buttonsStyling: false,
+          confirmButtonText: "{% translate 'Ok' %}!",
+          customClass: {
+            confirmButton: "btn btn-primary"
+          }
+        });
+      </script>
+    {% endfor %}
+  {% endif %}
+
+  {% if form.errors %}
+    <script id="id_form_error" type="application/json">
+      {{ form.errors.as_json }}
+    </script>
+    <script>
+      toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": true,
+        "progressBar": true,
+        "positionClass": "toastr-top-center",
+        "preventDuplicates": false,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+      };
+      const form_errors = JSON.parse(document.getElementById('id_form_error').textContent.replaceAll('&quot;', '"'));
+      $.each(form_errors, function (key, value) {
+        $.each(value, function (index, _value) {
+          if (key === "__all__") {
+            toastr.error(_value.message, "{% translate 'Error' %}");
+          } else {
+            toastr.error(_value.message, key);
+          }
+        });
+      });
+    </script>
+  {% endif %}
+
+  <!--begin::Django language-->
+  <script>
+    function submitChangeLanguageForm(language) {
+      $('#change_language_select_id').val(language).change();
+      $('#change_language_form_id').submit();
+    }
+  </script>
+  <!--end::Django language-->
+{% endblock javascript %}
