--- a/one/extend/riso_allauth/templates/account/password_reset_from_key_done.html
+++ b/one/extend/riso_allauth/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,31 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% translate "Change Password" %}{% endblock %}
+{% load account %}
+{% block title %} {% translate "Change Password" %} {% endblock %}
 
-{% block inner %}
-    <h1>{% translate "Change Password" %}</h1>
-    <p>{% translate 'Your password is now changed.' %}</p>
-{% endblock %}
+{% block content %}
+  <!--begin::Form-->
+  <form class="form w-100" novalidate="novalidate" action="#" method="post">
+    <!--begin::Body-->
+    <div class="card-body">
+      <!--begin::Heading-->
+      <div class="text-start mb-10">
+        <!--begin::Title-->
+        <h1 class="text-dark mb-3 fs-3x" data-kt-translate="sign-in-title">
+          {% translate "Change Password" %}
+        </h1>
+        <!--end::Title-->
+        <!--begin::Text-->
+        <div class="text-gray-400 fw-semibold fs-6"
+             data-kt-translate="general-desc">
+          {% translate 'Your password is now changed.' %}
+        </div>
+        <!--end::Text-->
+      </div>
+      <!--begin::Heading-->
+    </div>
+    <!--begin::Body-->
+  </form>
+  <!--end::Form-->
+{% endblock content %}
