--- a/one/templates/layout/default.html
+++ b/one/templates/layout/default.html
@@ -5,15 +5,15 @@
   <div class="d-flex flex-column flex-root" id="kt_app_root">
     <!--begin::Page-->
     <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
-{#      {% include 'partials/sidebar-layout/_header.html' %}#}
+      {% include 'layout/partials/sidebar-layout/_header.html' %}
       <!--begin::Wrapper-->
       <div class="app-wrapper flex-column flex-row-fluid" id="kt_app_wrapper">
-{#        {% include 'partials/sidebar-layout/_sidebar.html' %}#}
+{#        {% include 'layout/partials/sidebar-layout/_sidebar.html' %}#}
         <!--begin::Main-->
         <div class="app-main flex-column flex-row-fluid" id="kt_app_main">
           <!--begin::Content wrapper-->
           <div class="d-flex flex-column flex-column-fluid">
-{#            {% include 'partials/sidebar-layout/_toolbar.html' %}#}
+{#            {% include 'layout/partials/sidebar-layout/_toolbar.html' %}#}
             <!--begin::Content-->
             <div id="kt_app_content" class="app-content flex-column-fluid">
               <!--begin::Content container-->
@@ -26,7 +26,7 @@
             <!--end::Content-->
           </div>
           <!--end::Content wrapper-->
-{#          {% include 'partials/sidebar-layout/_footer.html' %}#}
+{#          {% include 'layout/partials/sidebar-layout/_footer.html' %}#}
         </div>
         <!--end:::Main-->
       </div>
@@ -36,10 +36,10 @@
   </div>
   <!--end::Root-->
 
-{#  {% include 'partials/_drawers.html' %}#}
+{#  {% include 'layout/partials/_drawers.html' %}#}
 
-{#  {% include 'partials/_modals.html' %}#}
+{#  {% include 'layout/partials/_modals.html' %}#}
 
-{#  {% include 'partials/_scrolltop.html' %}#}
+{#  {% include 'layout/partials/_scrolltop.html' %}#}
 
 {% endblock layout %}
