--- a/one/extend/riso_allauth/templates/account/account_inactive.html
+++ b/one/extend/riso_allauth/templates/account/account_inactive.html
@@ -1,11 +1,30 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load account %}
+{% block title %} {% translate "Account Inactive" %} {% endblock %}
 
-{% block head_title %}{% translate "Account Inactive" %}{% endblock %}
-
-{% block inner %}
-<h1>{% translate "Account Inactive" %}</h1>
-
-<p>{% translate "This account is inactive." %}</p>
-{% endblock %}
+{% block content %}
+  <!--begin::Form-->
+  <form class="form w-100" novalidate="novalidate" action="#" method="post">
+    <!--begin::Body-->
+    <div class="card-body">
+      <!--begin::Heading-->
+      <div class="text-start mb-10">
+        <!--begin::Title-->
+        <h1 class="text-dark mb-3 fs-3x" data-kt-translate="sign-in-title">
+          {% translate "Account Inactive" %}
+        </h1>
+        <!--end::Title-->
+        <!--begin::Text-->
+        <div class="text-gray-400 fw-semibold fs-6" data-kt-translate="general-desc">
+          {% translate "This account is inactive." %}
+        </div>
+        <!--end::Text-->
+      </div>
+      <!--begin::Heading-->
+    </div>
+    <!--begin::Body-->
+  </form>
+  <!--end::Form-->
+{% endblock content %}
