--- a/one/extend/riso_allauth/templates/account/base.html
+++ b/one/extend/riso_allauth/templates/account/base.html
@@ -1,10 +1,75 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-6 offset-md-3">
-    {% block inner %}{% endblock %}
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      {% block inner %}{% endblock %}
+    </div>
   </div>
-</div>
 {% endblock %}
+{% block footer %}
+  <div class="m-0">
+    <!--begin::Toggle-->
+    <button class="btn btn-flex btn-link rotate" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-start"
+            data-kt-menu-offset="0px, 0px">
+      {% get_current_language as LANGUAGE_CODE %}
+      {% if LANGUAGE_CODE == 'en' %}
+        <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
+             src="{% static 'media/flags/united-states.svg' %}" alt=""/>
+        <span data-kt-element="current-lang-name" class="me-2">{% translate 'English' %}</span>
+        <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
+        <span class="svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z"
+              fill="currentColor"/>
+          </svg>
+        </span>
+        <!--end::Svg Icon-->
+      {% else %}
+        <img data-kt-element="current-lang-flag" class="w-25px h-25px rounded-circle me-3"
+             src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
+        <span data-kt-element="current-lang-name" class="me-2">{% translate 'Vietnamese' %}</span>
+        <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
+        <span class="svg-icon svg-icon-3 svg-icon-muted rotate-180 m-0">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z"
+              fill="currentColor"/>
+          </svg>
+        </span>
+        <!--end::Svg Icon-->
+      {% endif %}
+    </button>
+    <!--end::Toggle-->
+    <!--begin::Menu-->
+    <div
+      class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-primary fw-semibold w-200px py-4"
+      data-kt-menu="true" id="kt_auth_lang_menu">
+      <!--begin::Menu item-->
+      <div class="menu-item px-3">
+        <a href="#" class="menu-link d-flex px-5" data-kt-lang="English" onclick="submitChangeLanguageForm('en');">
+            <span class="symbol symbol-20px me-4">
+              <img data-kt-element="lang-flag" class="rounded-1" src="{% static 'media/flags/united-states.svg' %}"
+                   alt=""/>
+            </span>
+          <span data-kt-element="lang-name">{% translate 'English' %}</span>
+        </a>
+      </div>
+      <!--end::Menu item-->
+      <!--begin::Menu item-->
+      <div class="menu-item px-3">
+        <a href="#" class="menu-link d-flex px-5" data-kt-lang="Vietnamese" onclick="submitChangeLanguageForm('vi');">
+            <span class="symbol symbol-20px me-4">
+              <img data-kt-element="lang-flag" class="rounded-1" src="{% static 'media/flags/vietnam.svg' %}" alt=""/>
+            </span>
+          <span data-kt-element="lang-name">{% translate 'Vietnamese' %}</span>
+        </a>
+      </div>
+      <!--end::Menu item-->
+    </div>
+    <!--end::Menu-->
+  </div>
+{% endblock footer %}
